# OpenSpace

./: CMakeLists.txt  openspace.cfg  vislink.cfg
apps/OpenSpace/: main.cpp
data/assets/: base.asset  vislink.scene
data/assets/examples/volume/: renderabletest.asset
data/assets/scene/solarsystem/: planets.asset
data/assets/vislink/: asteroid.asset  canoe.asset  gulfofmexico.asset  gulfofmexico2.asset  vislink.asset
include/openspace/engine/: moduleengine.h  pluginengine.h  sharedlibrary.h
include/openspace/util/: openspacemodule.h  plugininfo.h
modules/toyvolume/: CMakeLists.txt
modules/toyvolume/rendering/: renderabletest.cpp  renderabletest.h
plugins/: CMakeLists.txt
plugins/testplugin/: CMakeLists.txt  testpluginmodule.cpp  testpluginmodule.h
plugins/vislink/: CMakeLists.txt  vislinkmodule.cpp  vislinkmodule.h
plugins/vislink/rendering/: VLOpenSpaceProcLoader.cpp  VLOpenSpaceProcLoader.h  renderabletest.cpp  renderabletest.h  renderablevislink.cpp  renderablevislink.h
src/: CMakeLists.txt
src/engine/: moduleengine.cpp  pluginengine.cpp  sharedlibrary.cpp
support/cmake/: module_definition.cmake
tests/: CMakeLists.txt  main.cpp  test_assetloader.cpp
